src/objects/Product_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Product Plans</relationshipLabel>
        <relationshipName>Product_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Plan_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Types__c</fullName>
        <label>Plan Types</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Plan_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Plans</relationshipLabel>
        <relationshipName>Product_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Product Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Product Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>